updated SBW2-25.html page

--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -1,7 +1,151 @@
 ---
-
 layout: default
-title: 
+title: 2025 Soybean Breeders Workshop - Agenda and Presentations 
 sitemap: community/sbw
 ---
 
+<h2>2024 Soybean Breeders' Workshop - Pathology and Breeding Innovation</h2>
+<hr >
+<div>
+  <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Agenda_2025_02_18.pdf" target="_blank">View the published 2024 SBW Agenda</a>
+</div>
+
+<h3>Monday February 17th, 2025</h3>
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Aaron Lorenz, University of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
+      <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+      <tr><td>Rex Nelson, SoyBase, USDA</td><td>New look, New Functionality</td></tr>
+      <tr><td>Jianmin Ma, Purdue University</td><td>SoyRenSeq: An approach for disease resistance gene discovery and application</td></tr>
+      <tr><td>Geeta Menon, BASF</td><td>BASF soybean seeds and traits</td></tr>
+      <tr><td>Cory Hirsch, University of Minnesota</td><td>Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</td></tr>
+      <tr><td>Mark Miller, United Soybean Board</td><td>Current state and focus of USB research funding</td></tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>Keynote Presentations | Chair: Keith Rincker, BASF</th></tr>
+      <tr><td><i>Keynote speech:</i> Jan Leach<br >Colorado State University</td><td>Exploiting intergenic spaces to build stress resistance in plants</td></tr>
+      <tr><td><i>Keynote speech:</i> <br />University Distinguished Professor Emeritus, Kansas State University</td><td>Current and furture soybean disease challenges in the U.S.</td></tr>
+      <tr><td colspan='2'>Housekeeping announcements</td></tr>
+      <tr><td colspan='2'>Graduate Student and Postdoc Professional Development Event</td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Tuesday February 18th, 2025</h3>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><th colspan='2'>SESSION 2: Nematodes | Chairs: Carrie Miranda, North Dakota State University & Andrew Scaboo, University of Missouri</th></tr>
+      <tr><td>Andrew Scaboo, University of Missouri</td><td>New insights for developing soybean cultivars with broad SCN resistance</td></tr>
+      <tr><td>Horacio Lopez-Nicora, Ohio State University</td><td>Soybean Cyst Nematode: Current challenges and future innovations</td> </tr>
+      <tr><td>Melissa Mitchum, University of Georgia</td><td>Towards a better Understanding of soybean resistance to Southern Root-Knot Nematode</td></tr>
+      <tr><td>Caio Canella Vieira, University of Arkansas</td><td>Broading soybean resistance to Southern Root-Knot Nematode</td> </tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, University of Minnesota & Eliana Monteverde, University of Illionis
+
+
+    
+      <tr><td colspan='2'>Lunch (On your own)</td></tr>
+      <tr><th colspan='2'>SESSION 4: Genetics of host plant resistance | Chair: Jamie O’Rourke, USDA-ARS</th></tr>
+      <tr><td>Wayne Parrot, Univ. of Georgia</td><td>Identifying resistance QTL</td></tr>
+      <tr><td>Dave Hyten, Univ. of Nebraska</td><td>Stemborer resistance</td></tr>
+      <tr><td>Jeff Davis, Louisiana State Univ.</td><td>Host Plant Resistance to a Complex of Stink Bugs: Protecting Yield and Quality in Southern Soybean</td></tr>
+      <tr><td>Gustavo MacIntosh, Iowa State Univ.</td><td>Understanding the molecular mechanisms of plant defense suppression deployed by soybean aphids</td></tr>
+      <tr><td colspan='2'>Coffee Break</td></tr>
+      <tr><th colspan='2'>SESSION 4: Breeding for host plant resistance | Chair: Ben Fallen, UDSA-ARS</th></tr>
+      <tr><td>George Graef, Univ. of Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/George_Graef.pdf">Genetics of soybean host plant reaction to soybean gall midge infestation</a></td></tr>
+      <tr><td>Zenglu Li, Univ. of Georgia</td><td>Breeding for insect resistance in soybean</td></tr>
+      <tr><td>Molly Ryan, Corteva</td><td>Corteva insect native traits</td></tr>
+      <tr><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2024.html" target="_blank">2024 Poster Winners</a></td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Wednesday February 14th, 2024</h3>  
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><th colspan='2'>SESSION 6: Reports and Announcements | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+      <tr><td>Cleiton Wartha, Corteva</td><td>Announcement of poster winners</td></tr>
+      <tr><td>Jamie O’Rourke, USDA-ARS</td><td>Soybean Genomics Executive Committee Report</td></tr>
+      <tr><td>Elroy Cober, AAFC</td><td>Soybean Genetics Committee Report</td></tr>
+      <tr><td>Rex Nelson, USDA-ARS</td><td>SoyBase.org Update</td></tr>
+      <tr><td>Ben Fallen, USDA-ARS</td><td>Soybean Germplasm Committee Report</td></tr>
+      <tr><td colspan='2'>From the floor: Recognitions, retirements, and announcements</td></tr>
+      <tr><th colspan='2'>SESSION 7: Lightning presentations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+      <tr><td colspan='2'>Volunteered presentations</td></tr>
+      <tr><td colspan='2'>Adjourn</td></tr>
+    </body>
+  </table>
+</div>
+
+<h2>2024 Soybean Breeders' Workshop - Special Meetings</h2>
+<hr >
+<h3>Monday, February 12th, 2024</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Genomics prediction of GxE workshop</td></tr>
+      <tr><td>Soybean Germplasm Committee Meeting</td></tr>
+      <tr><td>SoyBase Workshop Meeting</td></tr>
+      <tr><td>Soybean Genomics Executive Committee Meeting</td></tr>
+      <tr><td>Technicians Workshop</td></tr>
+      <tr><td>Soybean Genetics Committee</td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Tuesday, February 13th, 2024</h3>  
+<div class="uk-overflow-auto">
+  <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Technicians Workshop</td></tr>
+      <tr><td>North Uniform Regional Testing</td></tr>
+      <tr><td>South Uniform Regional Testing</td></tr>
+      <tr><td>SCN Regional Testing</td></tr>
+    </body>
+  </table>
+</div>
+
+<h3>Wednesday, February 14th, 2024</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+          <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+    <body>
+      <tr><td>Missouri Soybean Merchandising Coucil</td></tr>
+      <tr><td>Soybean Breeders' Workshop Planning Committee</td></tr>
+    </body>
+  </table>
+</div>
