--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -65,23 +65,16 @@ sitemap: community/sbw
       <tr><td>Wade Webster, North Dakota State University</td><td>Soybean seedling disease managemrny in a changing climate</td></tr>
       <tr><td>Zenglu Li, University of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
       <tr><td>Dechun Wang, Michigan State University</td><td>Genetics and breeding for white mold resistance</td></tr>
-      
-
-
-
+      <tr><td>Mandy Bish, University of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
-
-      
-      <tr><th colspan='2'>SESSION 4: Breeding for host plant resistance | Chair: Ben Fallen, UDSA-ARS</th></tr>
-      <tr><td>George Graef, Univ. of Nebraska</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/George_Graef.pdf">Genetics of soybean host plant reaction to soybean gall midge infestation</a></td></tr>
-      <tr><td>Zenglu Li, Univ. of Georgia</td><td>Breeding for insect resistance in soybean</td></tr>
-      <tr><td>Molly Ryan, Corteva</td><td>Corteva insect native traits</td></tr>
-      <tr><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2024.html" target="_blank">2024 Poster Winners</a></td></tr>
+      <tr><th colspan='2'>SESSION 5: New and Emerging Disease Issues</th></tr>
+      <tr><td>Panel Discussion</td><td>New and emerging diseases: What should breeders be worried about?</td></tr>
+      <tr><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2025.html" target="_blank">2025 Poster Winners</a></td></tr>
     </body>
   </table>
 </div>
 
-<h3>Wednesday February 14th, 2024</h3>  
+<h3>Wednesday February 19th, 2025</h3>  
 <div class="uk-overflow-auto">
   <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
     <thead>
@@ -91,15 +84,19 @@ sitemap: community/sbw
         </tr>
     </thead>
     <body>
-      <tr><th colspan='2'>SESSION 6: Reports and Announcements | Chair: Aaron Lorenz, University of Minnesota</th></tr>
-      <tr><td>Cleiton Wartha, Corteva</td><td>Announcement of poster winners</td></tr>
+      <tr><th colspan='2'>SESSION 6: Reports and Announcements</th></tr>
+      <tr><td>Brent Brower-Toland, Bayer Crop Science</td><td>Announcement of poster winners</td></tr>
       <tr><td>Jamie O’Rourke, USDA-ARS</td><td>Soybean Genomics Executive Committee Report</td></tr>
       <tr><td>Elroy Cober, AAFC</td><td>Soybean Genetics Committee Report</td></tr>
-      <tr><td>Rex Nelson, USDA-ARS</td><td>SoyBase.org Update</td></tr>
       <tr><td>Ben Fallen, USDA-ARS</td><td>Soybean Germplasm Committee Report</td></tr>
       <tr><td colspan='2'>From the floor: Recognitions, retirements, and announcements</td></tr>
-      <tr><th colspan='2'>SESSION 7: Lightning presentations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
-      <tr><td colspan='2'>Volunteered presentations</td></tr>
+      <tr><th colspan='2'>SESSION 7: Oral Presentations selected from poster abstracts</th></tr>
+      <tr><td>Scott Moore, University of Guelph</td><td>Identification of novel marker-trait associations and genes for resistance to Soybean Cyst Nematode using a genetic diversity panel involving elite Canadian and Chinese germplasm</td></tr>
+      <tr><td>Atit Parajuli, Iowa State University</td><td>A SNP panel to facilitate maker-assisted selection of genomic regions carrying genes for drought and flood tolerance and disease resistance in Soybean</td></tr>
+      <tr><td>Lucas Roberts, University of Minnesota</td><td>Insights into breeding soybeans for winter oilseed relay-cropping systems</td></tr>
+      <tr><td>Mariola Usovsky, University of Missouri</td><td>Resistance to Soybean Cyst Nematode is independent of Rhg1 in soybean landrace PI 407729</td></tr>
+      <tr><td>Lauren Docherty, University of Minnesota</td><td>Virulence genetics of Soybean Cyst Nematode</td></tr>
+      <tr><td>Aamir Khan, University of Missouri</td><td>A complete pangenomic landscape unlocks the genomic diversity of wild and cultivated soybean genomes</td></tr>
       <tr><td colspan='2'>Adjourn</td></tr>
     </body>
   </table>
@@ -107,16 +104,17 @@ sitemap: community/sbw
 
 <h2>2024 Soybean Breeders' Workshop - Special Meetings</h2>
 <hr >
-<h3>Monday, February 12th, 2024</h3>  
+<h3>Monday, February 17th, 2025</h3>  
 <div class="uk-overflow-auto">
 <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
     <thead>
         <tr>
           <th class="uk-table-expand">Meeting</th>
+           <th class="uk-table-expand">Contact Person</th>
         </tr>
     </thead>
     <body>
-      <tr><td>Genomics prediction of GxE workshop</td></tr>
+      <tr><td>Data visualization workshop</td><td>Public Liaison Officer</td></tr>
       <tr><td>Soybean Germplasm Committee Meeting</td></tr>
       <tr><td>SoyBase Workshop Meeting</td></tr>
       <tr><td>Soybean Genomics Executive Committee Meeting</td></tr>
