--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -54,10 +54,10 @@ sitemap: community/sbw
       <tr><td>Caio Canella Vieira, University of Arkansas</td><td>Broading soybean resistance to Southern Root-Knot Nematode</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, University of Minnesota & Eliana Monteverde, University of Illionis</th></tr>
-      <tr><td>Alison Robertson, Iowa State University</td><td>Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</td></tr>
+      <tr><td>Alison Robertson, Iowa State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Alison_Robertson.pdf" target="_blank">Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</a></td></tr>
       <tr><td>Keith Merrill, Bayer Crop Science</td><td>Engineering disease tolerance through the use of genome editing</td></tr>
       <tr><td>Febina Mathew, North Dakota State University</td><td>Fusarium and Diaporthe: Latest insights</td></tr>
-      <tr><td>Andrew Bent, University of Wisconsin-Madison</td><td>Soybean Cyst Nematode resistance mechanisms</td></tr>
+      <tr><td>Andrew Bent, University of Wisconsin-Madison</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Bent.pdf" target="_blank">Soybean Cyst Nematode resistance mechanisms</a></td></tr>
       <tr><td>Steve Clough, USDA-ARS</td><td>Red Crown Rot - An emerging threat</td></tr> 
       <tr><td colspan='2'>Lunch</td></tr>
       <tr><th colspan='2'>SESSION 4: Foliar and Seeding Diseases | Chairs: Feng Lin, University of Missouri & Horacio Lopez-Nicora, Ohio State University</th></tr>
@@ -115,43 +115,44 @@ sitemap: community/sbw
     </thead>
     <body>
       <tr><td>Data visualization workshop</td><td>Public Liaison Officer</td></tr>
-      <tr><td>Soybean Germplasm Committee Meeting</td></tr>
-      <tr><td>SoyBase Workshop Meeting</td></tr>
-      <tr><td>Soybean Genomics Executive Committee Meeting</td></tr>
-      <tr><td>Technicians Workshop</td></tr>
-      <tr><td>Soybean Genetics Committee</td></tr>
+      <tr><td>Soybean Germplasm Committee Meeting</td><td>Ben Fallen, USDA-ARS</td></tr>
+      <tr><td>SoyBase Workshop Meeting</td><td><a href="https://www.soybase.org/about/#contact" target="_blank">Contact Soybase team</a></td></tr>
+      <tr><td>Soybean Genomics Executive Committee Meeting</td><td>Jamie O'Rourkke, USDA-ARS</td></tr>
+      <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
+      <tr><td>Soybean Genetics Committee</td><td>Elroy Cober, AAFC</td></tr>
     </body>
   </table>
 </div>
 
-<h3>Tuesday, February 13th, 2024</h3>  
+<h3>Tuesday, February 18th, 2025</h3>  
 <div class="uk-overflow-auto">
   <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
     <thead>
         <tr>
           <th class="uk-table-expand">Meeting</th>
+          <th class="uk-table-expand">Contact Person</th>
         </tr>
     </thead>
     <body>
-      <tr><td>Technicians Workshop</td></tr>
-      <tr><td>North Uniform Regional Testing</td></tr>
-      <tr><td>South Uniform Regional Testing</td></tr>
-      <tr><td>SCN Regional Testing</td></tr>
+      <tr><td>Technicians Workshop</td><td>Brian Little and Benjamin Bartlett</td></tr>
+      <tr><td>North Uniform Regional Testing & SCN Regional Testing</td><td>Adam Rock & Troy Cary</td></tr>
+      <tr><td>South Uniform Regional Testing</td><td>Anne Gillen</td></tr>
+      <tr><td></td></tr>
     </body>
   </table>
 </div>
 
-<h3>Wednesday, February 14th, 2024</h3>  
+<h3>Wednesday, February 19th, 2025</h3>  
 <div class="uk-overflow-auto">
 <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
     <thead>
         <tr>
           <th class="uk-table-expand">Meeting</th>
+          <th class="uk-table-expand">Contact Person</th>
         </tr>
     </thead>
     <body>
-      <tr><td>Missouri Soybean Merchandising Coucil</td></tr>
-      <tr><td>Soybean Breeders' Workshop Planning Committee</td></tr>
+      <tr><td>Soybean Breeders' Workshop Planning Committee</td><td>President of the SBW Planning Committee</td></tr>
     </body>
   </table>
 </div>
