--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -4,7 +4,7 @@ title: 2025 Soybean Breeders Workshop - Agenda and Presentations
 sitemap: community/sbw
 ---
 
-<h2>2024 Soybean Breeders' Workshop - Pathology and Breeding Innovation</h2>
+<h2>2025 Soybean Breeders' Workshop - Pathology and Breeding Innovation</h2>
 <hr >
 <div>
   <a class="uk-text-bold" href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Agenda_2025_02_18.pdf" target="_blank">View the published 2024 SBW Agenda</a>
@@ -23,14 +23,14 @@ sitemap: community/sbw
       <tr><td>Aaron Lorenz, University of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
       <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
       <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td>New look, New Functionality</td></tr>
-      <tr><td>Jianmin Ma, Purdue University</td><td>SoyRenSeq: An approach for disease resistance gene discovery and application</td></tr>
-      <tr><td>Geeta Menon, BASF</td><td>BASF soybean seeds and traits</td></tr>
-      <tr><td>Cory Hirsch, University of Minnesota</td><td>Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</td></tr>
-      <tr><td>Mark Miller, United Soybean Board</td><td>Current state and focus of USB research funding</td></tr>
+      <tr><td>Jianxin Ma, Purdue University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
+      <tr><td>Geeta Menon, BASF</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Geeta_Menon.pdf" target="_blank">BASF soybean seeds and traits</a></td></tr>
+      <tr><td>Cory Hirsch, University of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
+      <tr><td>Mark Miller, United Soybean Board</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Mark_Miller.pdf" target="_blank">Current state and focus of USB research funding</a></td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>Keynote Presentations | Chair: Keith Rincker, BASF</th></tr>
-      <tr><td><i>Keynote speech:</i> Jan Leach<br >Colorado State University</td><td>Exploiting intergenic spaces to build stress resistance in plants</td></tr>
-      <tr><td><i>Keynote speech:</i> <br />University Distinguished Professor Emeritus, Kansas State University</td><td>Current and furture soybean disease challenges in the U.S.</td></tr>
+      <tr><td><i>Keynote speech:</i> Federico Martin, Colorado State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Federico_Martin.pdf" target="_blank">Exploiting intergenic spaces to build stress resistance in plants</a></td></tr>
+      <tr><td><i>Keynote speech:</i> Carl Bradley, University of Kentucky</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Carl_Bradley.pdf" target="_blank">Current and future soybean diseases chanllenges in the U.S.</a></td></tr>
       <tr><td colspan='2'>Housekeeping announcements</td></tr>
       <tr><td colspan='2'>Graduate Student and Postdoc Professional Development Event</td></tr>
     </body>
@@ -48,10 +48,10 @@ sitemap: community/sbw
     </thead>
     <body>
       <tr><th colspan='2'>SESSION 2: Nematodes | Chairs: Carrie Miranda, North Dakota State University & Andrew Scaboo, University of Missouri</th></tr>
-      <tr><td>Andrew Scaboo, University of Missouri</td><td>New insights for developing soybean cultivars with broad SCN resistance</td></tr>
-      <tr><td>Horacio Lopez-Nicora, Ohio State University</td><td>Soybean Cyst Nematode: Current challenges and future innovations</td></tr>
+      <tr><td>Andrew Scaboo, University of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Scaboo.pdf" target="_blank">New insights for developing soybean cultivars with broad SCN resistance</a></td></tr>
+      <tr><td>Horacio Lopez-Nicora, Ohio State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Horacio_Lopez-Nicora.pdf" target="_blank">Soybean Cyst Nematode: Current challenges and future innovations</a></td></tr>
       <tr><td>Melissa Mitchum, University of Georgia</td><td>Towards a better Understanding of soybean resistance to Southern Root-Knot Nematode</td></tr>
-      <tr><td>Caio Canella Vieira, University of Arkansas</td><td>Broading soybean resistance to Southern Root-Knot Nematode</td></tr>
+      <tr><td>Caio Canella Vieira, University of Arkansas</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Caio_Canella.pdf" target="_blank">Broading soybean resistance to Southern Root-Knot Nematode</a></td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, University of Minnesota & Eliana Monteverde, University of Illionis</th></tr>
       <tr><td>Alison Robertson, Iowa State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Alison_Robertson.pdf" target="_blank">Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</a></td></tr>
@@ -61,8 +61,8 @@ sitemap: community/sbw
       <tr><td>Steve Clough, USDA-ARS</td><td>Red Crown Rot - An emerging threat</td></tr> 
       <tr><td colspan='2'>Lunch</td></tr>
       <tr><th colspan='2'>SESSION 4: Foliar and Seeding Diseases | Chairs: Feng Lin, University of Missouri & Horacio Lopez-Nicora, Ohio State University</th></tr>
-      <tr><td>Daren Mueller, Iowa State University</td><td>Foliar disease identification: How good are you?</td></tr>
-      <tr><td>Wade Webster, North Dakota State University</td><td>Soybean seedling disease managemrny in a changing climate</td></tr>
+      <tr><td>Daren Mueller, Iowa State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Daren_Mueller.pdf" target="_blank">Foliar disease identification: How good are you?</a></td></tr>
+      <tr><td>Wade Webster, North Dakota State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Wade_Webster.pdf" target="_blank">Soybean seedling disease managemrny in a changing climate</a></td></tr>
       <tr><td>Zenglu Li, University of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
       <tr><td>Dechun Wang, Michigan State University</td><td>Genetics and breeding for white mold resistance</td></tr>
       <tr><td>Mandy Bish, University of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
