--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -37,7 +37,7 @@ sitemap: community/sbw
 						<a href="./SBW/SBW_2016.html" target="_blank">2016</a>
 						<a href="./SBW/SBW_2017.html" target="_blank">2017</a>
 						<a href="./SBW/SBW_2024.html" target="_blank">2024</a>
-						<a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Agenda_2025_02_18.pdf">2025</a>
+						<a href="./SBW/SBW_2025.html" target="_blank">2025</a>
 						<p>2026</p>	
 					</div>
 							
