--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -22,7 +22,7 @@ sitemap: community/sbw
     <body>
       <tr><td>Aaron Lorenz, University of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
       <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
-      <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td>New look, New Functionality</td></tr>
+      <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Rex_Nelson.pdf" target="_blank">New look, New Functionality</a></td></tr>
       <tr><td>Jianxin Ma, Purdue University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
       <tr><td>Geeta Menon, BASF</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Geeta_Menon.pdf" target="_blank">BASF soybean seeds and traits</a></td></tr>
       <tr><td>Cory Hirsch, University of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
