small edits on html

--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -20,17 +20,17 @@ sitemap: community/sbw
         </tr>
     </thead>
     <body>
-      <tr><td>Aaron Lorenz, University of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
-      <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+      <tr><td>Aaron Lorenz, Univ. of Minnesota<br>Keith Rincker, BASF</td><td>Welcome and opening remarks</td></tr>
+      <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, Univ. of Minnesota</th></tr>
       <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Rex_Nelson.pdf" target="_blank">New look, New Functionality</a></td></tr>
-      <tr><td>Jianxin Ma, Purdue University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
+      <tr><td>Jianxin Ma, Purdue Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
       <tr><td>Geeta Menon, BASF</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Geeta_Menon.pdf" target="_blank">BASF soybean seeds and traits</a></td></tr>
-      <tr><td>Cory Hirsch, University of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
+      <tr><td>Cory Hirsch, Univ. of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
       <tr><td>Mark Miller, United Soybean Board</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Mark_Miller.pdf" target="_blank">Current state and focus of USB research funding</a></td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>Keynote Presentations | Chair: Keith Rincker, BASF</th></tr>
-      <tr><td><i>Keynote speech:</i> Federico Martin, Colorado State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Federico_Martin.pdf" target="_blank">Exploiting intergenic spaces to build stress resistance in plants</a></td></tr>
-      <tr><td><i>Keynote speech:</i> Carl Bradley, University of Kentucky</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Carl_Bradley.pdf" target="_blank">Current and future soybean diseases chanllenges in the U.S.</a></td></tr>
+      <tr><td><i>Keynote speech:</i> Federico Martin, Colorado State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Federico_Martin.pdf" target="_blank">Exploiting intergenic spaces to build stress resistance in plants</a></td></tr>
+      <tr><td><i>Keynote speech:</i> Carl Bradley, Univ. of Kentucky</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Carl_Bradley.pdf" target="_blank">Current and future soybean diseases chanllenges in the U.S.</a></td></tr>
       <tr><td colspan='2'>Housekeeping announcements</td></tr>
       <tr><td colspan='2'>Graduate Student and Postdoc Professional Development Event</td></tr>
     </body>
@@ -47,24 +47,24 @@ sitemap: community/sbw
         </tr>
     </thead>
     <body>
-      <tr><th colspan='2'>SESSION 2: Nematodes | Chairs: Carrie Miranda, North Dakota State University & Andrew Scaboo, University of Missouri</th></tr>
-      <tr><td>Andrew Scaboo, University of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Scaboo.pdf" target="_blank">New insights for developing soybean cultivars with broad SCN resistance</a></td></tr>
-      <tr><td>Horacio Lopez-Nicora, Ohio State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Horacio_Lopez-Nicora.pdf" target="_blank">Soybean Cyst Nematode: Current challenges and future innovations</a></td></tr>
-      <tr><td>Melissa Mitchum, University of Georgia</td><td>Towards a better Understanding of soybean resistance to Southern Root-Knot Nematode</td></tr>
-      <tr><td>Caio Canella Vieira, University of Arkansas</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Caio_Canella.pdf" target="_blank">Broading soybean resistance to Southern Root-Knot Nematode</a></td></tr>
+      <tr><th colspan='2'>SESSION 2: Nematodes | Chairs: Carrie Miranda, North Dakota State Univ. & Andrew Scaboo, Univ. of Missouri</th></tr>
+      <tr><td>Andrew Scaboo, Univ. of Missouri</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Scaboo.pdf" target="_blank">New insights for developing soybean cultivars with broad SCN resistance</a></td></tr>
+      <tr><td>Horacio Lopez-Nicora, Ohio State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Horacio_Lopez-Nicora.pdf" target="_blank">Soybean Cyst Nematode: Current challenges and future innovations</a></td></tr>
+      <tr><td>Melissa Mitchum, Univ. of Georgia</td><td>Towards a better Understanding of soybean resistance to Southern Root-Knot Nematode</td></tr>
+      <tr><td>Caio Canella Vieira, Univ. of Arkansas</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Caio_Canella.pdf" target="_blank">Broading soybean resistance to Southern Root-Knot Nematode</a></td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
-      <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, University of Minnesota & Eliana Monteverde, University of Illionis</th></tr>
-      <tr><td>Alison Robertson, Iowa State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Alison_Robertson.pdf" target="_blank">Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</a></td></tr>
+      <tr><th colspan='2'>SESSION 3: Stem and Root Diseases | Chairs: Megan McCaghey, Univ. of Minnesota & Eliana Monteverde, Univ. of Illionis</th></tr>
+      <tr><td>Alison Robertson, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Alison_Robertson.pdf" target="_blank">Loss of Rps gene efficacy for mitigating <i>Phytophthora</i> stem and root rot in coventional soybean varieties</a></td></tr>
       <tr><td>Keith Merrill, Bayer Crop Science</td><td>Engineering disease tolerance through the use of genome editing</td></tr>
-      <tr><td>Febina Mathew, North Dakota State University</td><td>Fusarium and Diaporthe: Latest insights</td></tr>
-      <tr><td>Andrew Bent, University of Wisconsin-Madison</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Bent.pdf" target="_blank">Soybean Cyst Nematode resistance mechanisms</a></td></tr>
+      <tr><td>Febina Mathew, North Dakota State Univ.</td><td>Fusarium and Diaporthe: Latest insights</td></tr>
+      <tr><td>Andrew Bent, Univ. of Wisconsin-Madison</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Andrew_Bent.pdf" target="_blank">Soybean Cyst Nematode resistance mechanisms</a></td></tr>
       <tr><td>Steve Clough, USDA-ARS</td><td>Red Crown Rot - An emerging threat</td></tr> 
       <tr><td colspan='2'>Lunch</td></tr>
-      <tr><th colspan='2'>SESSION 4: Foliar and Seeding Diseases | Chairs: Feng Lin, University of Missouri & Horacio Lopez-Nicora, Ohio State University</th></tr>
-      <tr><td>Daren Mueller, Iowa State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Daren_Mueller.pdf" target="_blank">Foliar disease identification: How good are you?</a></td></tr>
-      <tr><td>Wade Webster, North Dakota State University</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Wade_Webster.pdf" target="_blank">Soybean seedling disease managemrny in a changing climate</a></td></tr>
-      <tr><td>Zenglu Li, University of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
-      <tr><td>Dechun Wang, Michigan State University</td><td>Genetics and breeding for white mold resistance</td></tr>
+      <tr><th colspan='2'>SESSION 4: Foliar and Seeding Diseases | Chairs: Feng Lin, Univ. of Missouri & Horacio Lopez-Nicora, Ohio State Univ.</th></tr>
+      <tr><td>Daren Mueller, Iowa State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Daren_Mueller.pdf" target="_blank">Foliar disease identification: How good are you?</a></td></tr>
+      <tr><td>Wade Webster, North Dakota State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Wade_Webster.pdf" target="_blank">Soybean seedling disease managemrny in a changing climate</a></td></tr>
+      <tr><td>Zenglu Li, Univ. of Georgia</td><td>Progress in breeding for frogeye leafspot resistance</td></tr>
+      <tr><td>Dechun Wang, Michigan State Univ.</td><td>Genetics and breeding for white mold resistance</td></tr>
       <tr><td>Mandy Bish, University of Missouri</td><td>Insights from the field: An extension perspective on soybean diseases in the Central U.S.</td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
       <tr><th colspan='2'>SESSION 5: New and Emerging Disease Issues</th></tr>
@@ -89,20 +89,20 @@ sitemap: community/sbw
       <tr><td>Jamie O’Rourke, USDA-ARS</td><td>Soybean Genomics Executive Committee Report</td></tr>
       <tr><td>Elroy Cober, AAFC</td><td>Soybean Genetics Committee Report</td></tr>
       <tr><td>Ben Fallen, USDA-ARS</td><td>Soybean Germplasm Committee Report</td></tr>
-      <tr><td colspan='2'>From the floor: Recognitions, retirements, and announcements</td></tr>
+      <tr><td>From the floor: Recognitions, retirements, and announcements</td></tr>
       <tr><th colspan='2'>SESSION 7: Oral Presentations selected from poster abstracts</th></tr>
-      <tr><td>Scott Moore, University of Guelph</td><td>Identification of novel marker-trait associations and genes for resistance to Soybean Cyst Nematode using a genetic diversity panel involving elite Canadian and Chinese germplasm</td></tr>
-      <tr><td>Atit Parajuli, Iowa State University</td><td>A SNP panel to facilitate maker-assisted selection of genomic regions carrying genes for drought and flood tolerance and disease resistance in Soybean</td></tr>
-      <tr><td>Lucas Roberts, University of Minnesota</td><td>Insights into breeding soybeans for winter oilseed relay-cropping systems</td></tr>
-      <tr><td>Mariola Usovsky, University of Missouri</td><td>Resistance to Soybean Cyst Nematode is independent of Rhg1 in soybean landrace PI 407729</td></tr>
-      <tr><td>Lauren Docherty, University of Minnesota</td><td>Virulence genetics of Soybean Cyst Nematode</td></tr>
-      <tr><td>Aamir Khan, University of Missouri</td><td>A complete pangenomic landscape unlocks the genomic diversity of wild and cultivated soybean genomes</td></tr>
+      <tr><td>Scott Moore, Univ. of Guelph</td><td>Identification of novel marker-trait associations and genes for resistance to Soybean Cyst Nematode using a genetic diversity panel involving elite Canadian and Chinese germplasm</td></tr>
+      <tr><td>Atit Parajuli, Iowa State Univ.</td><td>A SNP panel to facilitate maker-assisted selection of genomic regions carrying genes for drought and flood tolerance and disease resistance in Soybean</td></tr>
+      <tr><td>Lucas Roberts, Univ. of Minnesota</td><td>Insights into breeding soybeans for winter oilseed relay-cropping systems</td></tr>
+      <tr><td>Mariola Usovsky, Univ. of Missouri</td><td>Resistance to Soybean Cyst Nematode is independent of Rhg1 in soybean landrace PI 407729</td></tr>
+      <tr><td>Lauren Docherty, Univ. of Minnesota</td><td>Virulence genetics of Soybean Cyst Nematode</td></tr>
+      <tr><td>Aamir Khan, Univ. of Missouri</td><td>A complete pangenomic landscape unlocks the genomic diversity of wild and cultivated soybean genomes</td></tr>
       <tr><td colspan='2'>Adjourn</td></tr>
     </body>
   </table>
 </div>
 
-<h2>2024 Soybean Breeders' Workshop - Special Meetings</h2>
+<h2>2025 Soybean Breeders' Workshop - Special Meetings</h2>
 <hr >
 <h3>Monday, February 17th, 2025</h3>  
 <div class="uk-overflow-auto">
